# orchestrator

./: .gitignore  ADVANCED_ARCHITECTURE_ANALYSIS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SKILLS.md  install.sh
core/: Cargo.toml  Makefile  README.md
core/src/: agent_lifecycle.rs  anomaly.rs  async_database.rs  cli.rs  cli_handler.rs  cli_output.rs  cli_types.rs  collab.rs  config.rs  config_ext.rs  config_load.rs  database.rs  db.rs  db_maintenance.rs  db_write.rs  dto.rs  dynamic_orchestration.rs  env_resolve.rs  error.rs  event_cleanup.rs  events.rs  events_backfill.rs  health.rs  json_extract.rs  lib.rs  log_cleanup.rs  main.rs  metrics.rs  migration.rs  output_capture.rs  output_validation.rs  prehook.rs  qa_doctor.rs  qa_utils.rs  resource.rs  runner.rs  runtime.rs  sandbox_network.rs  scheduler.rs  scheduler_port.rs  (+15 more)
core/src/cli/: mod.rs  qa.rs  resource.rs  store.rs  system.rs  task.rs  tests.rs
core/src/cli_handler/: check.rs  config_lifecycle.rs  definition.rs  edit.rs  mod.rs  output.rs  parse.rs  qa.rs  resource.rs  store_cmd.rs  system.rs  task.rs  task_exec.rs  task_session.rs  task_worker.rs
core/src/collab/: artifact.rs  context.rs  dag.rs  message.rs  mod.rs  output.rs
core/src/config/: agent.rs  defaults.rs  dynamic_items.rs  env_store.rs  execution.rs  execution_profile.rs  invariant.rs  item_isolation.rs  item_select.rs  mod.rs  observability.rs  pipeline.rs  prehook.rs  runner.rs  safety.rs  spawn.rs  step.rs  step_template.rs  store_backend_provider.rs  store_io.rs  workflow.rs  workflow_store.rs
core/src/config_load/: build.rs  mod.rs  normalize.rs  persist.rs  self_heal.rs  state.rs  validate.rs  workspace.rs
core/src/config_load/normalize/: config.rs  steps.rs  tests.rs  workflow.rs
core/src/config_load/validate/: adaptive_workflow.rs  agent_env.rs  common.rs  dynamic_steps.rs  execution_profiles.rs  finalize_rules.rs  loop_policy.rs  probe.rs  root_path.rs  self_referential.rs  tests.rs  workflow_steps.rs
core/src/config_validation/: schema.rs
core/src/crd/: builtin_defs.rs  hooks.rs  mod.rs  plugins.rs  projection.rs  resolve.rs  schema.rs  scope.rs  store.rs  types.rs  validate.rs  writeback.rs
core/src/dynamic_orchestration/: adaptive.rs  dag.rs  graph.rs  mod.rs  prehook.rs  step_pool.rs
core/src/observability/: init.rs  mod.rs
core/src/persistence/: migration.rs  migration_steps.rs  mod.rs  schema.rs  sqlite.rs
core/src/persistence/repository/: config.rs  daemon_meta.rs  mod.rs  scheduler.rs  session.rs  workflow_store.rs
core/src/prehook/: cel.rs  context.rs  finalize.rs  mod.rs  tests.rs
core/src/resource/: agent.rs  apply.rs  defaults.rs  env_store.rs  execution_profile.rs  export.rs  helpers.rs  mod.rs  parse.rs  project.rs  registry.rs  runtime_policy.rs  secret_store.rs  step_template.rs  test_fixtures.rs  tests.rs  trigger.rs  workflow.rs  workspace.rs
core/src/resource/workflow/: workflow_convert.rs
core/src/runner/: mod.rs  policy.rs  profile.rs  redact.rs  resource_limits.rs  sandbox.rs  sandbox_linux.rs  sandbox_macos.rs  spawn.rs
core/src/scheduler/: check.rs  invariant.rs  item_executor.rs  item_generate.rs  item_select.rs  loop_engine.rs  phase_runner.rs  query.rs  runtime.rs  safety.rs  spawn.rs  task_state.rs  trace.rs
core/src/scheduler/check/: capability.rs  execution.rs  mod.rs  safety.rs  workflow.rs  workspace.rs
core/src/scheduler/item_executor/: accumulator.rs  apply.rs  dispatch.rs  finalize.rs  guard.rs  mod.rs  spill.rs  tests.rs
core/src/scheduler/loop_engine/: continuation.rs  cycle_safety.rs  graph.rs  isolation.rs  mod.rs  segment.rs  tests.rs
core/src/scheduler/phase_runner/: mod.rs  record.rs  setup.rs  spawn.rs  tests.rs  types.rs  util.rs  validate.rs  (+1 more)
core/src/service/: bootstrap.rs  daemon.rs  mod.rs  resource.rs  store.rs  system.rs  task.rs
core/src/store/: command.rs  file.rs  local.rs  mod.rs  validate.rs
core/src/task_repository/: command_run.rs  items.rs  mod.rs  queries.rs  state.rs  trait_def.rs  types.rs  write_ops.rs
core/tests/: integration_test.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  client.rs  main.rs  output.rs
crates/daemon/: Cargo.toml  README.md  build.rs
crates/daemon/src/: control_plane.rs  daemonize.rs  fs_watcher.rs  lifecycle.rs  main.rs  protection.rs  server.rs  uds_security.rs  webhook.rs
crates/gui/: Cargo.toml  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/src/: client.rs  errors.rs  lib.rs  main.rs  state.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: agent_drain.rs  grpc_compat.rs  lifecycle.rs  trigger_fire.rs  workflow_loop.rs
crates/orchestrator-client/: Cargo.toml
crates/orchestrator-client/src/: config.rs  connect.rs  lib.rs
crates/orchestrator-collab/: Cargo.toml
crates/orchestrator-collab/src/: artifact.rs  context.rs  lib.rs  message.rs  output.rs
crates/orchestrator-config/: Cargo.toml  README.md
crates/orchestrator-config/src/: adaptive.rs  cli_types.rs  crd_types.rs  dynamic_step.rs  env_resolve.rs  lib.rs  plugin_policy.rs  resource_store.rs  selection.rs
crates/orchestrator-runner/: Cargo.toml
crates/orchestrator-runner/src/: lib.rs  test_env.rs
crates/orchestrator-scheduler/: Cargo.toml  README.md  build.rs
crates/orchestrator-scheduler/src/: lib.rs  scheduler.rs
crates/orchestrator-security/: Cargo.toml
crates/orchestrator-security/src/: lib.rs  secret_key_audit.rs  secret_key_lifecycle.rs  secret_store_crypto.rs
crates/proto/: Cargo.toml  README.md  build.rs  orchestrator.proto
crates/proto/src/: lib.rs
orchestrator/src-tauri/: Cargo.toml  Makefile  tauri.conf.json
orchestrator/src-tauri/src/: api.rs  capability.rs  cli.rs  cli_handler.rs  cli_types.rs  collab.rs  config.rs  config_load.rs  dto.rs  dynamic_orchestration.rs  events.rs  health.rs  lib.rs  main.rs  metrics.rs  prehook.rs  qa_utils.rs  resource.rs  scheduler.rs  selection.rs  state.rs  test_utils.rs
orchestrator/src-tauri/tests/: integration_test.rs
(+1120 files in other folders)
