[workspace]
resolver = "2"
members = [
    "core",
    "crates/orchestrator-collab",
    "crates/orchestrator-config",
    "crates/orchestrator-runner",
    "crates/orchestrator-security",
    "crates/orchestrator-scheduler",
    "crates/proto",
    "crates/daemon",
    "crates/cli",
    "crates/gui",
    "crates/orchestrator-client",
    "crates/integration-tests",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
libc = "0.2"
