[package]
name = "agent-orchestrator"
version = "0.1.0"
description = "Agent Orchestrator"
authors = [""]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[dependencies]
orchestrator-proto = { path = "../crates/proto" }
anyhow = "1.0"
arc-swap = "1.7"
aes-gcm-siv = "0.11"
base64 = "0.22"
cel-interpreter = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
sha2 = "0.10"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "json"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
walkdir = "2.5"
pathdiff = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.26.0"
