[package]
name = "agent-orchestrator"
version = "0.1.5"
description = "Core library for the Agent Orchestrator — task scheduling, runner, and persistence"
repository = "https://github.com/c9r-io/orchestrator"
keywords = ["orchestrator", "agent", "automation", "sdlc"]
categories = ["development-tools"]
license = "MIT"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true

[dependencies]
orchestrator-config = { path = "../crates/orchestrator-config", version = "0.1.5" }
orchestrator-proto = { path = "../crates/proto", version = "0.1.5" }
anyhow = "1.0"
arc-swap = "1.9"
aes-gcm-siv = "0.11"
base64 = "0.22"
cel-interpreter = "0.10.0"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.13"
glob = "0.3"
sha2 = "0.10"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "json"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
walkdir = "2.5"
pathdiff = "0.2"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { version = "0.29", default-features = false, features = ["user"] }

[features]
test-harness = []

[dev-dependencies]
tempfile = "3.26.0"
