[package]
name = "orchestrator-cli"
version = "0.1.4"
description = "CLI client for the Agent Orchestrator daemon"
repository = "https://github.com/c9r-io/orchestrator"
keywords = ["orchestrator", "cli", "agent", "automation"]
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
rust-version.workspace = true
license = "MIT"
readme = "README.md"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
orchestrator-proto = { path = "../proto", version = "0.1.4" }
anyhow = "1.0"
dirs = "6"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tonic = { version = "0.14", features = ["tls-native-roots", "tls-ring"] }
tokio-stream = "0.1"
tower = "0.5"
hyper-util = "0.1"

agent-orchestrator = { path = "../../core", version = "0.1.4" }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { version = "0.29", default-features = false, features = ["signal"] }

[dev-dependencies]
tempfile = "3.10"
