[package]
name = "orchestrator-cli"
version = "0.3.1"
description = "CLI client for the Agent Orchestrator daemon"
repository = "https://github.com/c9r-io/orchestrator"
keywords = ["orchestrator", "cli", "agent", "automation"]
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
rust-version.workspace = true
license = "MIT"
readme = "README.md"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
orchestrator-client = { path = "../orchestrator-client", version = "0.3.1" }
orchestrator-proto = { path = "../proto", version = "0.3.1" }
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.6"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tonic = { version = "0.14", features = ["tls-native-roots", "tls-ring"] }
tokio-stream = "0.1"
agent-orchestrator = { path = "../../core", version = "0.3.1" }
orchestrator-config = { path = "../orchestrator-config", version = "0.3.1" }
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { version = "0.31", default-features = false, features = ["signal"] }

[dev-dependencies]
