[package]
name = "orchestratord"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestratord"
path = "src/main.rs"

[dependencies]
agent-orchestrator = { path = "../../core" }
orchestrator-proto = { path = "../proto" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
pem = "3.0"
prost = "0.14"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tonic = { version = "0.14", features = ["tls-native-roots", "tls-ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
x509-parser = "0.18"
serde_json = "1.0"
serde_yml = "0.0.12"
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
dev-insecure = []

[dev-dependencies]
tempfile = "3.10"
