[package]
name = "orchestratord"
version = "0.2.6"
description = "Daemon process for the Agent Orchestrator — gRPC control plane and task execution"
repository = "https://github.com/c9r-io/orchestrator"
keywords = ["orchestrator", "daemon", "grpc", "agent"]
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
rust-version.workspace = true
license = "MIT"
readme = "README.md"

[[bin]]
name = "orchestratord"
path = "src/main.rs"

[dependencies]
agent-orchestrator = { path = "../../core", version = "0.2.6" }
orchestrator-scheduler = { path = "../orchestrator-scheduler", version = "0.2.6" }
orchestrator-client = { path = "../orchestrator-client", version = "0.2.6" }
orchestrator-proto = { path = "../proto", version = "0.2.6" }
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
pem = "3.0"
prost = "0.14"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tonic = { version = "0.14", features = ["tls-native-roots", "tls-ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter", "json"] }
x509-parser = "0.18"
serde_json = "1.0"
serde_yaml = "0.9"
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
http = "1"
http-body = "1"
pin-project-lite = "0.2"
tower = "0.5"
axum = "0.8"
hmac = "0.13"
hex = "0.4"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = "0.7"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { version = "0.31", default-features = false, features = ["signal", "process", "fs"] }

[features]
dev-insecure = []

[dev-dependencies]
tempfile = "3.10"
