[package]
name = "orchestrator-gui"
version = "0.2.6"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
publish = false

[dependencies]
orchestrator-client = { path = "../orchestrator-client", version = "0.2.6" }
orchestrator-proto = { path = "../proto", version = "0.2.6" }
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-notification = "2"
tonic = { version = "0.14", features = ["tls-native-roots", "tls-ring"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[build-dependencies]
tauri-build = "2"

[lib]
name = "orchestrator_gui_lib"
path = "src/lib.rs"

[[bin]]
name = "orchestrator-gui"
path = "src/main.rs"
