[package]
name = "orchestrator-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-orchestrator = { path = "../../core", features = ["test-harness"] }
orchestrator-proto = { path = "../proto" }
tonic = "0.14"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1.0"
serde_json = "1.0"
