[package]
name = "orchestrator-integration-tests"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
publish = false

[dependencies]
agent-orchestrator = { path = "../../core", version = "0.3.1", features = ["test-harness"] }
orchestrator-scheduler = { path = "../orchestrator-scheduler", version = "0.3.1", features = ["test-harness"] }
orchestrator-proto = { path = "../proto", version = "0.3.1" }
tonic = "0.14"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1.0"
serde_json = "1.0"

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"
