[package]
name = "orchestrator-collab"
version = "0.2.2"
description = "Agent collaboration types — message bus, shared context, DAG, and artifacts"
repository = "https://github.com/c9r-io/orchestrator"
keywords = ["orchestrator", "agent", "collaboration"]
categories = ["development-tools"]
license = "MIT"
edition.workspace = true
rust-version.workspace = true

[dependencies]
orchestrator-config = { path = "../orchestrator-config", version = "0.2.2" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["sync"] }
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync"] }
