[package]
name = "orchestrator-collab"
version = "0.3.1"
description = "Agent collaboration types — shared context, DAG, and artifacts"
repository = "https://github.com/c9r-io/orchestrator"
keywords = ["orchestrator", "agent", "collaboration"]
categories = ["development-tools"]
license = "MIT"
edition.workspace = true
rust-version.workspace = true

[dependencies]
orchestrator-config = { path = "../orchestrator-config", version = "0.3.1" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["serde", "v4"] }
