[package]
name = "orchestrator-config"
version = "0.2.7"
description = "Configuration models and loading for the Agent Orchestrator"
repository = "https://github.com/c9r-io/orchestrator"
keywords = ["orchestrator", "config", "yaml", "agent"]
categories = ["development-tools", "config"]
license = "MIT"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
uuid = { version = "1.11", features = ["serde", "v4"] }
walkdir = "2.5"

[features]
test-harness = []

[dev-dependencies]
tempfile = "3.26.0"
