[package]
name = "orchestrator-runner"
version = "0.3.1"
description = "Command runner, sandbox, output capture, and network allowlist"
repository = "https://github.com/c9r-io/orchestrator"
keywords = ["orchestrator", "runner", "sandbox"]
categories = ["development-tools"]
license = "MIT"
edition.workspace = true
rust-version.workspace = true

[dependencies]
orchestrator-config = { path = "../orchestrator-config", version = "0.3.1" }
anyhow = "1.0"
tokio = { version = "1.51", features = ["fs", "io-util", "macros", "process", "rt", "sync"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { version = "0.31", default-features = false, features = ["user"] }
uuid = { version = "1.23", features = ["v4"] }

[dev-dependencies]
tempfile = "3.26.0"
tokio = { version = "1.51", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync"] }
