[package]
name = "orchestrator-scheduler"
version = "0.1.0"
description = "Scheduler, runner, and prehook engine for the Agent Orchestrator"
authors = [""]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[dependencies]
agent-orchestrator = { path = "../../core" }
orchestrator-config = { path = "../orchestrator-config" }
orchestrator-proto = { path = "../proto" }
async-trait = "0.1"
anyhow = "1.0"
arc-swap = "1.7"
cel-interpreter = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
sha2 = "0.10"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-rusqlite = "0.5"
tracing = "0.1"
uuid = { version = "1.11", features = ["serde", "v4"] }
pathdiff = "0.2"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { version = "0.29", default-features = false, features = ["user"] }

[features]
test-harness = ["agent-orchestrator/test-harness"]

[dev-dependencies]
tempfile = "3.26.0"
