[package]
name = "orchestrator-scheduler"
version = "0.1.5"
description = "Scheduler, runner, and prehook engine for the Agent Orchestrator"
repository = "https://github.com/c9r-io/orchestrator"
keywords = ["orchestrator", "scheduler", "runner", "agent"]
categories = ["development-tools"]
license = "MIT"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true

[dependencies]
agent-orchestrator = { path = "../../core", version = "0.1.5" }
orchestrator-config = { path = "../orchestrator-config", version = "0.1.5" }
orchestrator-proto = { path = "../proto", version = "0.1.5" }
async-trait = "0.1"
anyhow = "1.0"
arc-swap = "1.9"
cel-interpreter = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-rusqlite = "0.5"
tracing = "0.1"
uuid = { version = "1.11", features = ["serde", "v4"] }
pathdiff = "0.2"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { version = "0.31", default-features = false, features = ["user"] }

[features]
test-harness = ["agent-orchestrator/test-harness"]

[dev-dependencies]
agent-orchestrator = { path = "../../core", version = "0.1.5", features = ["test-harness"] }
tempfile = "3.26.0"
