[package]
name = "orchestrator-proto"
version = "0.1.4"
description = "Protocol Buffers definitions and generated code for the Agent Orchestrator"
repository = "https://github.com/c9r-io/orchestrator"
keywords = ["orchestrator", "grpc", "protobuf", "agent"]
categories = ["development-tools"]
edition.workspace = true
rust-version.workspace = true
license = "MIT"
readme = "README.md"

[dependencies]
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
